# cpp_emotions_detector

./: .gitignore  CMakeLists.txt  README.md
src/: download_model_from_gist.sh  emotiondetector.cpp  emotiondetector.h  face.cpp  face.h  facedetector.cpp  facedetector.h  gui.cpp  gui.h  main.cpp
src/data/model/: EmotiW_VGG_S.caffemodel  deploy_emotion.prototxt
src/models/54aee1b8b0397721aa4b/: README.md  train_val.prototxt
